[package]
name = "ipfs-one"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", default-features = false, features = [
    "http1",
    "tokio",
    "tracing",
] }
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["stream"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
